--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,37 @@
-# --- Global IDE / OS ---
+# --- Global ---
 .DS_Store
 Thumbs.db
+*.log
+*.tmp
+
+# --- Git ---
+.git-credentials
 .idea/
 .vscode/
-*.log
+
+# --- Node / Angular ---
+node_modules/
+dist/
+.angular/
 npm-debug.log*
-yarn-error.log*
+package-lock.json
 
-# --- Laravel (backend) ---
-/backend/vendor/
-# clés / stockage
-/backend/storage/*.key
-/backend/public/storage
-# env
-/backend/.env
-/backend/.env.*.backup
-# caches Laravel
-/backend/bootstrap/cache/*.php
-/backend/.phpunit.result.cache
+# --- Laravel / PHP ---
+vendor/
+bootstrap/cache/*
+!bootstrap/cache/.gitignore
+storage/*.key
+storage/app/*
+storage/framework/cache/*
+storage/framework/sessions/*
+storage/framework/views/*
+storage/logs/*
+!.gitignore
 
-# --- Angular (frontend) ---
-/frontend/node_modules/
-#/frontend/.angular/   # (optionnel, cache de build)
-/frontend/dist/
-/frontend/tmp/
-
-# --- Monorepo générique ---
-/node_modules/
+# --- Env & secrets ---
 .env
+.env.*
+!.env.example
+
+# --- Misc builds ---
+coverage/
